--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -32,7 +32,7 @@ autoloaderNamespaces[] = "ZC"
 ;pluginPaths.ZendX_Application_Resource = "ZendX/Application/Resource"
 ;resources.frontController.plugins.navigation = "ZC_Controller_Plugin_Navigation"
 resources.frontController.plugins.navigation = "ZC_Controller_Plugin_ApplicationSent"
-resources.frontController.plugins.navigation = "ZC_Controller_Plugin_CustomerMenu"
+;resources.frontController.plugins.navigation = "ZC_Controller_Plugin_CustomerMenu"
 [staging : production]
 
 [testing : production]
