dahuja fixau, wrodze vsio robit

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -29,6 +29,15 @@ resources.db.params.dbname = test
 resources.db.params.charset = utf8
 autoloaderNamespaces[] = "ZC"
 
+;resources.db.adapter = mysqli
+;resources.db.isDefaultTableAdapter = true
+;resources.db.params.host = localhost
+;resources.db.params.username = helpyoub_user
+;resources.db.params.password = m7W3u9T6e2
+;resources.db.params.dbname = helpyoub_base
+;resources.db.params.charset = utf8
+;autoloaderNamespaces[] = "ZC"
+
 ;pluginPaths.ZendX_Application_Resource = "ZendX/Application/Resource"
 ;resources.frontController.plugins.navigation = "ZC_Controller_Plugin_Navigation"
 resources.frontController.plugins.navigation = "ZC_Controller_Plugin_ApplicationSent"
